pages/index/SocialsBar.module.css
#socials {
  width: 100%;
  height: 64px;
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  gap: 16px;
  background-color: var(--dark);
}

.item {
  display: block;
  position: relative;
  width: 48px;
  height: 48px;

  &:before {
    display: block;
    background-color: #373a4388;
    position: absolute;
    inset: 2px;
    z-index: 1;
    border-radius: 3px;
    content: "";
  }

  & .inner {
    position: absolute;
    inset: 8px;
    z-index: 2;
    mask-image: var(--bg);
    mask-size: cover;
    background-color: var(--primary);
    transition: background-color var(--speed) ease-out;
  }

  &:hover .inner {
    background-color: var(--hover);
  }
}

